--- a/DocumentacionMeliExercise/mkdocs.yml
+++ b/DocumentacionMeliExercise/mkdocs.yml
@@ -3,8 +3,7 @@ nav:
   - Home: index.md
   - EDA: eda.md
   - Patrón Arquitectonico: patron.md
-  - Features: features.md
-  - Modelo: modelo.md
+  - Features y Modelado: features.md
   - Metricas: metricas.md
   - Conclusiones: conclusiones.md
 
